<resources>
    <string name="app_name">Belting</string>

    <string name="factory">温州红龙工业设备</string>

    <string name="bind_shibiehao">绑定序列号</string>

    <string name="connecting">连接中……</string>
    <string name="check_bluetooth">检查蓝牙通信……</string>

    <string name="please_enter_username">请输入账号</string>
    <string name="please_enter_password">请输入密码</string>

    <string name="login">登陆</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="point_up">提示</string>
    <string name="request_located_permission">请授予定位权限，之后才可正常使用</string>
    <string name="realy_to_bind_deviceId">确定要绑定序列号吗？</string>

    <string name="brand">品牌&#12288;&#12288;</string>
    <string name="alias">产品别名</string>
    <string name="product_use">产品用途</string>
    <string name="type">型号</string>
    <string name="use_i">用途</string>
    <string name="use_ii">规格</string>

    <string name="bluetooth_service_run">蓝牙服务启动成功</string>

    <string name="please_connect_device">请启动蓝牙并连接设备</string>

    <string name="please_choose">请选择蓝牙设备</string>

    <string name="device_connect">设备连接</string>
    <string name="enter_to_connect">点击绑定设备</string>
    <string name="connect">确认连接</string>

    <string name="refresh">刷新</string>
    <string name="contact">联系</string>
    <string name="my">我的</string>
    <string name="setting">设置</string>
    <string name="star">收藏</string>
    <string name="status">状态</string>

    <string name="change_type">切换机型</string>
    <string name="operation_report">运行报表</string>
    <string name="language">语言</string>
    
    <string name="factory_setting">出厂设置</string>
    <string name="reboot_system">重启系统</string>
    <string name="logout">退出登录</string>

    <string name="device_id">机器编号</string>
    <string name="track_type">皮带型号</string>
    <string name="pressure">气压设置（Bar）</string>
    <string name="upModel_te">上模温度（°C）</string>
    <string name="downModel_tem">下模温度（°C）</string>
    <string name="upModel_te_no">上模温度</string>
    <string name="downModel_tem_no">下模温度</string>
    <string name="cooling_te">冷却温度（°C）</string>

    <string name="soaking_time">接头保温时间（s）</string>
    <string name="preheating_preloading_switch">预热预压开关</string>
    <string name="preloading">预压（Bar）</string>
    <string name="preheating_tem">预热温度（°C）</string>
    <string name="preheating_soaking_time">预热保温时间（s）</string>

    <string name="please_enter_track_type">皮带型号</string>

    <string name="stop_device">停止设备</string>

    <string name="please_stop_first">请先停止设备</string>
    <string name="run_device">运行设备</string>
    <string name="star_prescription">收藏配方</string>
    <string name="stared">已收藏</string>
    <string name="have_started">该配方已经收藏</string>

    <string name="upload_report">上传所选报表</string>

    <string name="load_report_without_upload_from_device">加载设备中未上传的报表</string>

    <string name="please_enter_num_of_report_loaded">请输入报表数</string>
    <string name="load_report">加载报表</string>
    <string name="load">载入</string>
    <string name="sure_to_load_this_prescription">确认要载入此配方吗？</string>
    
    <string name="manufacturer">制造商</string>
    <string name="manufacturer_msg">温州红龙工业设备制造有限公司</string>

    <string name="address">地址</string>
    <string name="address_msg">浙江省瑞安市开发区大道3588号E幢兴东小微创业园3号楼一楼</string>

    <string name="phone">电话</string>
    <string name="phone_num">(86)0577–65682000</string>
    
    <string name="fax">传真</string>
    <string name="fax_msg">(86)0577–65916651</string>

    <string name="website">网站</string>
    <string name="website_url">www.18816.cn</string>
    <string name="website_url_2">www.holobelt.com</string>
    
    <string name="facebook">Facebook</string>
    <string name="facebook_msg">holopress</string>
    
    <string name="whats_app">Whats App</string>
    <string name="whats_app_msg">Levin chen</string>
    
    <string name="youtube">You Tube</string>
    <string name="youtube_msg">holo press</string>
    
    <string name="aftermarket_we_chat">售后微信</string>

    <string name="language_time_zone">语言/时区</string>
    <string name="current_language">当前语言</string>
    <string name="current_time_zone">当前时区</string>
    <string name="system_time">系统时间</string>

    <string name="save">保存</string>

    <string name="select_language">选择语言</string>
    
    <string name="reboot_to_apply">请重启软件生效</string>
    
    <string name="click_to_change">点击切换</string>

    <string name="please_connect_again">请断开蓝牙重新连接</string>
    <string name="to_set">去设置</string>

    <string name="sure_to_reboot">重启系统需要1分钟时间，确定要重启吗？</string>
    <string name="sure_to_logout">确定要退出登录吗</string>
    
    <string name="tem_time_graph">温度时间曲线</string>

    <string name="current_tem">当前温度</string>
    <string name="target_tem">设定温度</string>

    <string name="current_pressure">当前气压</string>
    <string name="target_pressure">设定气压</string>

    <string name="other">其他</string>
    <string name="now_task_time">当前任务用时</string>
    <string name="target_soaking_time">设定接头保温时间（S）</string>
    <string name="target_cooling_tem">设定冷却温度（°C）</string>

    <string name="please_select_report">请选择要上传的报表</string>

    <string name="report_form">运行报表</string>

    <string name="look_up">查看</string>
    <string name="look_up_report_form">查看报表</string>

    <string name="sure_to_load_report_form">要载入此报表的设置参数吗？</string>
    
    <string name="mainboard_time">手机时间</string>
    <string name="current_time">面板时间</string>
    <string name="mainboard_tem">主板温度</string>
    <string name="disk">硬盘剩余</string>
    <string name="current_ip">实时IP</string>
    <string name="ip">面板IP</string>
    <string name="device_type">设备编号</string>
    <string name="customer_id">客户公司编号</string>
    <string name="customer_name">客户公司名称</string>
    <string name="set_password">设置密码</string>
    <string name="please_set_password">请设置密码</string>
    <string name="network_reset">网络重置</string>

    <string name="star_success">收藏成功</string>

    <string name="run_success">已发送设备运行指令</string>

    <string name="stop_success">已发送设备停止指令</string>

    <string name="max">已经到达最大值了哦</string>
    <string name="min">已经到达最小值了哦</string>

    <string name="max_tem">最高温度</string>
    <string name="min_tem">最低温度</string>

    <string name="max_pressure">最高气压</string>
    <string name="min_pressure">最低气压</string>
    
    <string name="mainly_parameters">主要参数</string>
    <string name="task_time">任务用时</string>

    <string name="bind_failed">绑定设备失败</string>

    <string name="bind_complete">绑定设备成功，请重启程序</string>

    <string name="right">请输入合法的数字</string>
    <string name="report_upload_suc">报表上传成功</string>
    <string name="report_upload_fal">报表上传失败</string>
    <string name="disconnect_please_connect_again">断开连接，请重新连接</string>
    <string name="holo_bluetooth_service">红龙蓝牙连接服务</string>
    <string name="bluetooth_connecting">蓝牙连接中</string>
    <string name="start_sus">启动成功</string>
    <string name="star_fal">收藏失败</string>
    <string name="total_time">总时长</string>
    <string name="delete_alias_with_empty">留空则为删除别名</string>
    <string name="set_device_alias">设置蓝牙别名</string>
    <string name="delete_alias">已删除该别名</string>
    <string name="set_alias">别名设置成功</string>
    <string name="long_touch_can_set_alias">长按蓝牙可设置别名哦！</string>
    <string name="please_open_bluetooth">请确认蓝牙已开启！</string>
    <string name="copy_id">已复制识别号</string>
    <string name="get_device_msg_fal">获取设备信息失败</string>
    <string name="connect_closed">断开连接</string>
    <string name="conect_sus">连接成功，正在查询设备数据，可直接确认链接</string>
    <string name="please_connect_right_device">请选择正确的蓝牙设备</string>

    <string name="retry">重试</string>
    
    <string name="make_report_before">正在生成之前的报表，期间可能指令会不灵敏……</string>
    <string name="make_report_before_complete">共生成 %1$s 张报表</string>

    <string name="load_num_of_note">加载记录数：%1$s</string>
    <string name="load_num_of_report">加载报表数：%1$s / %2$s</string>
    
    <string name="manual_starting">手动启动</string>

    <string name="note_num">当前记录：%1$s 条</string>
    <string name="clear_note">清除设备记录</string>
    <string name="realy_to_clear">确定要清除设备记录吗？</string>
    <string name="clear_completely">清除记录成功</string>
    
    <string name="tips">温馨提示</string>
    <string name="run_tips">运行工作中，手机请不要锁屏\n同时请检查四个螺杆是否固定完整\n确定运行机器吗？</string>

</resources>