<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#f7f7f8">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/white"
        app:title="@string/language_time_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layout_current_language"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:layout_margin="16dp"
                    android:text="@string/current_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/current_language_right"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_chevron_right_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_current_language"
                    android:textColor="@color/black"
                    android:layout_toStartOf="@id/current_language_right"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:text="简体中文"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <View
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#cccccc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:layout_margin="16dp"
                    android:text="@string/current_time_zone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/tv_current_time_zone"
                    android:textColor="@color/black"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:text="UCT+8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <View
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#cccccc"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="15sp"
                    android:layout_margin="16dp"
                    android:text="@string/system_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/tv_system_time"
                    android:textColor="@color/black"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:text="2021/01/14 17:59:00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/bt_save"
        android:textColor="@color/white"
        android:text="@string/save"
        android:background="@drawable/button_green_background"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>