<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">




    <ImageView
        android:background="@color/white"
        android:alpha="0.3"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:src="@drawable/hhhhh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <RelativeLayout
        android:layout_marginTop="48dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginStart="4dp"
            android:layout_centerVertical="true"
            android:src="@drawable/hint_user"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <EditText
            android:maxLines="1"
            android:inputType="text"
            android:textSize="15sp"
            android:id="@+id/et_username"
            android:background="@null"
            android:hint="@string/please_enter_username"
            android:paddingStart="48dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content" />

        <View
            android:background="#cccccc"
            android:layout_alignBottom="@id/et_username"
            android:layout_width="320dp"
            android:layout_height="1dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginStart="4dp"
            android:layout_centerVertical="true"
            android:src="@drawable/hint_pass"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <EditText
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="15sp"
            android:id="@+id/et_password"
            android:background="@null"
            android:hint="@string/please_enter_password"
            android:paddingStart="48dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"/>

        <View
            android:background="#cccccc"
            android:layout_alignBottom="@id/et_password"
            android:layout_width="320dp"
            android:layout_height="1dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:textSize="15sp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_red_background"
        android:textColor="@color/white"
        android:text="@string/login"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="wrap_content"/>



</LinearLayout>