<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fa"
            type="com.heyanle.holo.entity.FactorySettingInfo" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/factory_setting"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.core.widget.NestedScrollView
            android:background="#f7f7f8"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_margin="16dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/mainboard_time"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:id="@+id/phoneTime"
                                android:layout_gravity="center"
                                android:layout_margin="14dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <View
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:background="#cccccc"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"/>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_margin="16dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/current_time"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:id="@+id/time"
                                android:layout_gravity="center"
                                android:layout_margin="14dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </LinearLayout>





                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_margin="16dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/device_id"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:id="@+id/device"
                                android:layout_gravity="center"
                                android:layout_margin="16dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:layout_weight="1"
                                android:text="@{fa.deviceId}"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <View
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:background="#cccccc"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"/>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_margin="16dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/device_type"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_gravity="center"
                                android:layout_margin="16dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:layout_weight="1"
                                android:text="@{fa.deviceType}"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <View
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:background="#cccccc"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"/>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_margin="16dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/customer_id"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_gravity="center"
                                android:layout_margin="16dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:layout_weight="1"
                                android:text="@{fa.customerId+``}"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                        <View
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:background="#cccccc"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"/>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_margin="16dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/customer_name"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:layout_gravity="center"
                                android:layout_margin="16dp"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:layout_weight="1"
                                android:text="@{fa.customerName}"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>
                    </LinearLayout>





                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_margin="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_marginEnd="8dp"
                        android:id="@+id/bt_save"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:background="@drawable/button_green_background"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:layout_marginStart="8dp"
                        android:id="@+id/bt_reset"
                        android:text="@string/network_reset"
                        android:textColor="@color/white"
                        android:background="@drawable/button_red_background"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>